# DogPooMapper

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: events.py
backend/app/core/: config.py  database.py
backend/app/models/: event.py
backend/app/schemas/: event.py
backend/app/services/: detector.py
backend/app/tests/: test_events.py
config/: frigate.yml
data/: README.roboflow.txt  data.yaml
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml  results.csv
